--- a/templates/base.html
+++ b/templates/base.html
@@ -1,89 +1,74 @@
 <!DOCTYPE html>
-
 <html>
     <head>
-        <title>blog!</title>
+        <title>build-a-blog</title>
+        <style type="text/css">
+
+            .error {
+                color: red;
+                font-weight: bold;
+                margin-top: 5px;
+            }
+
+            div {
+                margin-top: 5px;
+                margin-bottom: 5px;
+            }
+
+            body {
+                font-family: sans-serif;
+                width: 800px;
+                margin: 0 auto;
+                padding: 2px;
+            }
+
+            label {
+                display: block;
+                font-size: 20px;
+                padding: 2px;
+            }
+
+            input[type=text] {
+                width: 400px;
+                font-size: 20px;
+                padding: 2px;
+            }
+
+            textarea {
+                width: 800px;
+                height: 200px;
+                font-size: 17px;
+                font-family: monospace;
+                padding: 2px;
+            }
+
+            input[type=submit] {
+                font-size: 24px;
+                margin-top: 10px;
+            }
+
+            .title {
+                font-weight: bold;
+                font-size: 20px;
+            }
+
+            .blog-post {
+                margin: 20;
+                font-size: 17px;
+                padding: 5px;
+            }
+
+        </style>
     </head>
 
-    <style type="text/css">
-        body {
-            font-family: sans-serif;
-            width: 800px;
-            margin: 0 auto;
-            padding: 10px;
-        }
+            <body>
+                <br>
+                <h1>build-a-blog</h1>
+                <hr>
+                <br>
 
-        .error {
-            color: red;
-        }
+                {% block content %}
+                {% endblock %}
 
-        label {
-            display: block;
-            font-size: 20px;
-        }
-
-        input[type=text] {
-            width: 400px;
-            font-size: 20 px;
-            padding: 2px;
-        }
-
-        textarea {
-            width: 400px;
-            height: 200px;
-            font-size: 17px;
-            font-family: monospace;
-        }
-
-        input[type=submit] {
-            font-size: 24px;
-        }
-
-        hr {
-            margin: 20px auto;
-        }
-
-        .content + .content {
-            margin-top: 20px;
-        }
-
-        .content-subject {
-            font-weight: bold;
-            font-size: 20px;
-        }
-
-        .content-body {
-            margin: 0;
-            font-size: 17px;
-        }
-
-    </style>
-
-    <body>
-    <h1>blog!</h1>
-
-    <form method="post">
-        <label>
-            <div>subject</div>
-            <input type="text" name="subject" value="{{subject}}">
-        </label>
-
-        <label>
-            <div>content</div>
-            <textarea name="content">{{content}}</textarea>
-        </label>
-
-        <div class="error">{{error}}</div>
-
-        <input type="submit">
-    </form>
-
-    <hr>
-    {% for post in posts %}
-        <div class="post">
-            <div class="post-subject">{{post.subject}}</div>
-            <pre class="post-body">{{post.post}}</pre>
-    {% endfor %}
-
-    </body>
+            </body>
 </html>
