--- a/templates/new-post.html
+++ b/templates/new-post.html
@@ -2,5 +2,23 @@
 
 {% block content %}
 
+        <h2>new blog post</h2>
+        <hr>
+
+        <form method="post">
+            <label>
+                <div>title</div>
+                <input type="text" name="title" value="{{title}}">
+            </label>
+
+            <label>
+                <div>blog post</div>
+                <textarea name="blog-post">{{blog_post}}</textarea>
+            </label>
+
+            <div class="error">{{error}}</div>
+
+            <input type="submit" name="submit" value="submit">
+        </form>
 
 {% endblock %}
